--- a/Application/Application/Base.lproj/MainMenu.xib
+++ b/Application/Application/Base.lproj/MainMenu.xib
@@ -37,7 +37,7 @@
                                     <action selector="showRules:" target="Voe-Tx-rLC" id="Xqt-cr-d9F"/>
                                 </connections>
                             </menuItem>
-                            <menuItem title="Preferences..." id="yfe-lu-f3I">
+                            <menuItem title="Settings..." id="yfe-lu-f3I">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="showPreferences:" target="Voe-Tx-rLC" id="0UK-iW-u9N"/>
@@ -68,7 +68,7 @@
                 <menuItem title="Rules..." tag="102" id="i2A-ax-9ff">
                     <modifierMask key="keyEquivalentModifierMask"/>
                 </menuItem>
-                <menuItem title="Preferences..." tag="103" id="Zao-2v-WyJ">
+                <menuItem title="Settings..." tag="103" id="Zao-2v-WyJ">
                     <modifierMask key="keyEquivalentModifierMask"/>
                 </menuItem>
                 <menuItem isSeparatorItem="YES" id="tk5-GP-rWn"/>
